--- a/style.css
+++ b/style.css
@@ -2,16 +2,32 @@ body {
   font-family: "Baloo Tammudu 2", cursive;
   text-align: center;
   line-height: 1.2;
+  margin: auto;
+  padding: 0;
+}
+
+.food {
+  font-weight: bold;
 }
 
 section {
   border: 4px solid black;
-  display: inline-block;
-  width: 30%;
-  margin: 1%;
+
+  margin-left: 3%;
   background-color: gray;
-  border-box: box-sizing;
+
   position: relative;
+}
+
+section a {
+  color: #dc143c;
+}
+
+section a:hover {
+  text-decoration: none;
+  color: #ffebcd;
+  background: #dc143c;
+  padding: 5px;
 }
 
 .chicken h2,
@@ -20,12 +36,12 @@ section {
   position: absolute;
   border: 2px solid black;
   right: 0;
-  top: -20px;
+  top: 0;
   background: #ffb6c1;
   padding: 1%;
-  line-height: 2em;
-  height: 2rem;
+  margin-bottom: 2em;
   width: 10rem;
+  text-align: center;
 }
 
 .beef h2 {
@@ -39,33 +55,16 @@ section {
 .chicken p,
 .beef p,
 .sushi p {
-  padding: 10% 2% 1% 2%;
+  padding: 15% 2% 1% 2%;
 }
 
-@media screen and (min-width: 768px) and (max-width: 991px) {
-  .chicken {
-    width: 40vw;
-  }
-
-  .beef {
-    width: 40vw;
+@media screen and (max-width: 991px) {
+  div {
+    margin-bottom: 10px;
+    margin-left: 0;
   }
 
   .sushi {
-    width: 83vw;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .chicken {
-    width: 83vw;
-  }
-
-  .beef {
-    width: 83vw;
-  }
-
-  .sushi {
-    width: 83vw;
+    margin-left: 12px;
   }
 }
